Fix settings page overflowing on mobile

--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -20,11 +20,15 @@
     grid-auto-flow: unset;
     grid-template-columns: 1fr 1fr 1fr;
   }
+
+  @media (max-width: 400px) {
+    grid-auto-flow: unset;
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 .settings-type {
-  padding: 15px;
-  padding-inline: 20px;
+  padding: 15px 20px;
   width: min-content;
 
   @media (max-width: 700px) {
@@ -90,6 +94,14 @@
     }
   }
 
+  @media (max-width: 400px) {
+    &.simple {
+      grid-template-areas: 'name'
+      'chooser';
+      grid-template-columns: 1fr;
+      grid-auto-flow: row;
+    }
+  }
 }
 
 .settings-name {
@@ -107,6 +119,10 @@
 
   & .button-default {
     height: 100%;
+
+    @media (max-width: 400px) {
+      padding: 8px 10px;
+    }
   }
 }
 
